added inquiry domain, also added some staff domain api endpoints
